[Add] API for retrieving totals lockdown
